welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:14: error: unclosed comment
/*
^Methods:2: error: Missing closing brace `}' assumed here
def goAndGet() {
^